--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "firebase": "^11.0.2",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.468.0",
+    "motion": "^11.13.5",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
