--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "axios": "^1.7.9",
     "firebase": "^11.0.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.468.0",
